<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:layout_marginLeft="0dp"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:elevation="4dp"
            android:orientation="vertical"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:titleTextColor="@color/colorPrimaryDark"></android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/widokNawigacyjny"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nakladkaxml"
        app:menu="@menu/menu_nawigacji"></android.support.design.widget.NavigationView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="19dp"
            android:text="Aby wykonać zamianę walut użyj switch  -> "
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switch4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.437" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="87dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="19dp"
            android:checked="false"
            android:switchMinWidth="75dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.353" />

        <TextView

            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/pln"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tytul"
            app:layout_constraintTop_toBottomOf="@+id/tytul"
            tools:text="PLN" />

        <TextView
            android:id="@+id/tytul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="41dp"
            android:fontFamily="sans-serif-medium"
            android:hapticFeedbackEnabled="false"
            android:lineSpacingExtra="30sp"
            android:text="@string/kurs_walut"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Kurs Walut" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="42dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/strzalka"
            android:textColor="@color/colorPrimary"
            android:textSize="45sp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/tytul" />

        <TextView

            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="8dp"
            android:text="@string/walutaZagraniczna"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tytul"
            app:layout_constraintTop_toBottomOf="@+id/tytul"
            tools:text="GBP" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.321">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="169dp"
                tools:layout_editor_absoluteY="146dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Aktualna wartość przelicznika:"
                android:textAlignment="center"
                android:textColor="@color/colorAc"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="393dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:fontFamily="sans-serif-medium"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="393dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="10"
                android:fontFamily="sans-serif-medium"
                android:hapticFeedbackEnabled="false"
                android:lineSpacingExtra="0sp"
                android:text="Podaj wartość do przewalutowania:"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorAc"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="223dp" />

            <EditText
                android:id="@+id/editText"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="99dp"
                android:layout_marginEnd="99dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/podaj_warto"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="308dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Po przewalutowaniu otrzymasz:"
                android:textAlignment="center"
                android:textColor="@color/colorAc"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="393dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="393dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Po prawdopodobnym kursie w kantorze otrzymasz:"
                android:textAlignment="center"
                android:textColor="@color/colorAc"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="393dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="393dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    style="@android:style/Widget.Holo.Button.Small"
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:text="@string/oblicz" />

                <Button
                    android:id="@+id/button3"
                    style="@android:style/Widget.Holo.Button.Small"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/od_wie_kurs" />

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.DrawerLayout>